--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>mma.legacy</groupId>
-  <artifactId>interval</artifactId>
+  <artifactId>interval6</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>interval</name>
+  <name>interval6</name>
   <url>http://maven.apache.org</url>
 
   <properties>
