Eliminacion de codigo duplicado

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,21 @@ addons:
     organization: "golcinab-github"
     token:
       secure: "95a09b2a3ffd5a2e3cc5e1bad7ef52762ebe7f50"
+
 jdk:
   - oraclejdk8
+
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
+
 notifications:
   slack:
     rooms:
       - mma-20162017:USiQRxtAva8gFN3xVFNNxC10
-    on_success: change
+    on_success: always
     on_failure: always
